# rust-automata

./: Cargo.toml
src/: automata.rs  conways.rs  grid.rs  lib.rs  main.rs  ruleset.rs
www/: index.js  package-lock.json  package.json
