[package]
name = "rust-automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
cfg-if = "1.0.0"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
wee_alloc = "0.4.5"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
